"Sign in" = "Sign in";
"Magic link" = "Magic link";
"Send magic link" = "Send magic link";
"Overview" = "Overview";
"Create League" = "Create League";
"Join League" = "Join League";
"Your Leagues" = "Your Leagues";
"Team" = "Team";
"Lineup" = "Lineup";
"Bench" = "Bench";
"Matchup" = "Matchup";
"Players" = "Players";
"League" = "League";



